# bfbb

./: CHANGELOG.md  Cargo.toml  README.md  clippy.toml
.github/workflows/: check-code.yml  ci.yml
examples/: game-interface.rs  hooking.rs
src/: endian.rs  game_state.rs  level.rs  lib.rs  room.rs  spatula.rs
src/game_interface/: game_var.rs  mod.rs
src/game_interface/dolphin/: data_member.rs  dolphin_interface.rs  dolphin_var.rs  mod.rs
src/game_interface/mock/: mock_vars.rs  mod.rs
