[package]
name = "bfbb"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Library for interacting with SpongeBob SquarePants: Battle for Bikini Bottom"
repository = "https://github.com/BfBBModdingTools/bfbb"
keywords = ["spongebob", "bfbb"]

[package.metadata.docs.rs]
all-features = true

[features]
game-interface = [
    "dep:process-memory",
    "dep:proc-maps",
    "dep:sysinfo",
    "dep:winapi",
]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
strum = "0.24"
strum_macros = "0.24"

thiserror = "1"

log = "0.4"

#Memory Shenanigans
process-memory = { version = "0.5", optional = true }  # For reading external process memory
proc-maps = { version = "0.2", optional = true }       # For querying memory maps
sysinfo = { version = "0.26", optional = true }        # For getting PID by name
bytemuck = { version = "1.12", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", optional = true }
